--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <title>Ultimate Frisbee - Home</title>
   <link rel="stylesheet" href="hw1.css" />
   <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
 </head>
-
 <body>
   <header>
     <h1>Ultimate Frisbee</h1>
@@ -60,7 +58,6 @@
     </section>
   </main>
 </body>
-
 </html>
 
-<!-- Developed By SeyedMohammadMahdi Kiaei  -->
+<!-- Developed By Mohammad Kiaei  -->
